syntax = "proto3";

option java_package = "com.example.grpcservicedemo.grpc";

service WorkflowService {
    rpc getWorkflows (WorkflowsRequest) returns (WorkflowsResponse) {}
    rpc getWorkflow (WorkflowRequest) returns (WorkflowResponse) {}
}

message WorkflowsRequest {
}

message WorkflowsResponse {
    repeated Workflow workflow = 1;
}

message Workflow {
    uint64 id = 1;
    uint64 viewId = 2;
    string folder = 3;
    string name = 4;
}

message WorkflowRequest {
    int64 id = 1;
}

message WorkflowResponse {
    Workflow workflow = 1;
}
